--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,11 @@ django = "^3.0.4"
 django-environ = "^0.4.5"
 strawberry-graphql = "^0.21.1"
 django-model-utils = "^4.0.0"
+django-fsm = "^2.7.0"
+django-choices = "^1.7.1"
+django-object-actions = "^2.0.0"
+django-nested-admin = "^3.2.4"
+django-admin-interface = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
