--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ django-nested-admin = "^3.2.4"
 django-admin-interface = "^0.12.1"
 uvicorn = "0.11.2"
 django-cors-headers = "^3.2.1"
+aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
