--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
+pdbpp = "^0.10.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
