Quiz UI, partecipant support, fixes

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,2 +1,5 @@
 run-server:
 	poetry run uvicorn pycon_quiz.asgi:application --reload
+
+load-demodata:
+	poetry run python manage.py loaddata demodata.json
