--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@urql/devtools": "^2.0.2",
+    "@urql/exchange-graphcache": "^2.4.2",
     "@xstate/react": "^0.8.1",
     "graphql": "^15.0.0",
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
+    "react-use-form-state": "^0.12.1",
     "subscriptions-transport-ws": "^0.9.16",
+    "theme-ui": "^0.3.1",
     "urql": "^1.9.7",
     "xstate": "^4.9.1"
   },
@@ -25,6 +31,18 @@
     "@graphql-codegen/typescript-urql": "^1.13.3",
     "@types/node": "^13.13.0",
     "@types/react": "^16.9.34",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
 }
