--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,6 +24,6 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx", "src/definitions/ResizeObserver.d.ts "
   ]
 }
