--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.13.3",
+    "@graphql-codegen/fragment-matcher": "^1.13.5",
+    "@graphql-codegen/introspection": "^1.13.5",
     "@graphql-codegen/typescript-operations": "^1.13.3",
     "@graphql-codegen/typescript-urql": "^1.13.3",
     "@types/node": "^13.13.0",
