--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = "0.11.5"
 django-cors-headers = "^3.2.1"
 aioredis = "^1.3.1"
 strawberry-graphql = "^0.25.1"
+psycopg2 = "^2.8.5"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
