--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,10 +19,13 @@ django-cors-headers = "^3.2.1"
 aioredis = "^1.3.1"
 strawberry-graphql = "^0.25.1"
 psycopg2 = "^2.8.5"
+django-seal = "^1.2.3"
+isort = "^4.3.21"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 pdbpp = "^0.10.2"
+django-debug-toolbar = "^2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
