Collectstatic in the docker image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,8 @@ RUN pip install gunicorn
 
 COPY . /app/
 
+RUN DATABASE_URL='' python manage.py collectstatic --noinput
+
 ENV DJANGO_SETTINGS_MODULE=pycon_quiz.settings.prod
 
 EXPOSE 8000
