--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ pytest-django = "^3.9.0"
 factory_boy = "^2.12.0"
 pytest-factoryboy = "^2.0.3"
 isort = "^4.3.21"
+pytest-cov = "^2.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
