--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = pycon_quiz.settings.test
 python_files = tests.py test_*.py *_tests.py conftest.py
+addopts = --cov=. --cov-report=xml
