--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,4 +1,4 @@
-schema: ${NEXT_PUBLIC_BACKEND_URL:http://localhost:8000/graphql}
+schema: ${NEXT_PUBLIC_BACKEND_URL:https://d2x84vjkgthxda.cloudfront.net/graphql}
 documents: ./src/**/*.graphql
 generates:
   ./src/types.tsx:
