--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,9 @@ django-seal = "^1.2.3"
 whitenoise = "^5.0.1"
 pytest = "^5.4.2"
 pytest-django = "^3.9.0"
+django-storages = "^1.9.1"
+boto3 = "^1.13.15"
+Pillow = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
