--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,8 @@ pytest-django = "^3.9.0"
 django-storages = "^1.9.1"
 boto3 = "^1.13.15"
 Pillow = "^7.1.2"
+django-rq = "^2.3.2"
+rq-scheduler = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
