--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,7 @@ factory_boy = "^2.12.0"
 pytest-factoryboy = "^2.0.3"
 isort = "^4.3.21"
 pytest-cov = "^2.8.1"
+bpython = "^0.19"
 
 [build-system]
 requires = ["poetry>=0.12"]
