--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ boto3 = "^1.13.15"
 Pillow = "^7.1.2"
 django-rq = "^2.3.2"
 rq-scheduler = "^0.10.0"
+sentry-sdk = "^0.14.4"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
