--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ Pillow = "^7.1.2"
 django-rq = "^2.3.2"
 rq-scheduler = "^0.10.0"
 sentry-sdk = "^0.14.4"
+hashids = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
