--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,6 +41,7 @@ pytest-factoryboy = "^2.0.3"
 isort = "^4.3.21"
 pytest-cov = "^2.8.1"
 bpython = "^0.19"
+freezegun = "^0.3.15"
 
 [build-system]
 requires = ["poetry>=0.12"]
