--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,4 +1,5 @@
 schema: https://d2x84vjkgthxda.cloudfront.net/graphql
+# schema: http://localhost:8000/graphql
 documents: ./src/**/*.graphql
 generates:
   ./src/types.tsx:
