--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,7 @@ django-admin-interface = "^0.12.1"
 uvicorn = "0.11.5"
 django-cors-headers = "^3.2.1"
 aioredis = "^1.3.1"
-strawberry-graphql = "^0.25.1"
+strawberry-graphql = {git = "https://github.com/strawberry-graphql/strawberry", rev = "fix/multiple-subscriptions-over-same-websocket"}
 psycopg2 = "^2.8.5"
 django-seal = "^1.2.3"
 whitenoise = "^5.0.1"
