--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "subscriptions-transport-ws": "^0.9.16",
     "theme-ui": "^0.3.1",
     "urql": "^1.9.7",
+    "use-sound": "^1.0.2",
     "xstate": "^4.9.1"
   },
   "devDependencies": {
