--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,7 +29,7 @@ django-rq = "^2.3.2"
 rq-scheduler = "^0.10.0"
 sentry-sdk = "^0.14.4"
 hashids = "^1.2.0"
-strawberry-graphql = {git = "https://github.com/strawberry-graphql/strawberry", rev = "fix/multiple-subscriptions-over-same-websocket"}
+strawberry-graphql = "^0.61.3"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
