--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,4 +1,4 @@
-schema: ${API_URL}
+schema: ${API_URL:https://d4v30sgvhcss3.cloudfront.net/graphql}
 documents: ./src/**/*.graphql
 generates:
   ./src/types.tsx:
