--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^6.0.2",
     "react-spring": "^8.0.27",
     "react-use-form-state": "^0.12.1",
     "subscriptions-transport-ws": "^0.9.16",
